index.html 파일 내용 수정

--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<h1> Hello Github World </h1>
-<h2> 재밌는 Github~ </h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kim Do-Eun</title>
+</head>
+<body>
+    <h1>강사님 설명 잘해주셔서 너무 좋아요</h1>
+    <h2>강사님 설명 잘해주셔서 너무 좋아요</h2>
+    <h3>강사님 설명 잘해주셔서 너무 좋아요</h3>
+    <h4>강사님 설명 잘해주셔서 너무 좋아요</h4>
+    <h5>강사님 설명 잘해주셔서 너무 좋아요</h5>
+    <h6>강사님 설명 잘해주셔서 너무 좋아요</h6>
+</body>
+</html>
